Upgrade to Spring Boot 3.0.0-SNAPSHOT.